--- a/server/pom.xml
+++ b/server/pom.xml
@@ -188,6 +188,7 @@
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
             <version>18.0</version>
+            <scope>test</scope>
         </dependency>
         <!-- 测试用 结束 -->
     </dependencies>
