--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,16 @@
                     <encoding>UTF-8</encoding>
                 </configuration>
             </plugin>
+            <!-- 使用 mvn javadoc:javadoc 来生成javadoc -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>2.9.1</version>
+                <configuration>
+                    <encoding>UTF-8</encoding>
+                    <aggregate>true</aggregate>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
