添加 rest-client-sniffer 代码

--- a/client/pom.xml
+++ b/client/pom.xml
@@ -15,6 +15,7 @@
     <modules>
         <module>rest</module>
         <module>rest-high-level</module>
+        <module>sniffer</module>
     </modules>
 
 
