--- a/client/rest-high-level/pom.xml
+++ b/client/rest-high-level/pom.xml
@@ -11,6 +11,18 @@
 
     <groupId>org.zx.elasticsearch.client</groupId>
     <artifactId>elasticsearch-rest-high-level-client</artifactId>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>12</source>
+                    <target>12</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
     <properties>
         <versions.elasticsearch>7.2.1</versions.elasticsearch>
