--- a/modules/pom.xml
+++ b/modules/pom.xml
@@ -12,6 +12,18 @@
     <groupId>org.zx.elasticsearch</groupId>
     <artifactId>modules</artifactId>
     <packaging>pom</packaging>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>12</source>
+                    <target>12</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
     <modules>
         <module>transport-netty4</module>
     </modules>
