--- a/modules/transport-netty4/pom.xml
+++ b/modules/transport-netty4/pom.xml
@@ -11,6 +11,18 @@
 
     <groupId>org.zx.elasticsearch</groupId>
     <artifactId>transport-netty4</artifactId>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>12</source>
+                    <target>12</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
     <dependencies>
         <dependency>
